spacing issue for mobile devices

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -499,6 +499,7 @@
         font-size: 30px;
         line-height: 45px;
         text-align: center;
+        padding-top: 170px;
     }
 
     .margin {
@@ -526,12 +527,20 @@
         width: 100%;
     }
 
+    .sect2 {
+        padding-bottom: 100px;
+    }
+
     .right {
         margin-bottom: 26px;
     }
 
     .screen {
         flex: 0 0 100%;
+    }
+
+    .sec4-boxes-about {
+        padding-bottom: 100px;
     }
 
 
