--- a/styles/style.css
+++ b/styles/style.css
@@ -810,7 +810,7 @@ textarea {
 }
 
 .about-sec2-img {
-    padding: 20px;
+    padding: 0 20px 20px;
 }
 
 .sec2-about-img {
